# Selective_Gemm

./: .gitignore  CMakeLists.txt  README.md
data/: dyz_input_content.txt  dyz_q_content.txt
include/: NaiveKernel.h  common.h  cublasOp.h  mbmmKernel.h
perf/: plot.py
src/: NaiveKernel.cu  cublasOp.cc  main.cc  mbmmKernel.cu  tvm_test.py
src/python/: tvm_test.py
